<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_rectangle_nav</name>
  <version>0.0.1</version>
  <description>Package to move TurtleBot around a rectangle and communicate via WebSocket and FastAPI</description>

  <maintainer email="liziye725@gmail.com">Ziye Li</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>fastapi</exec_depend>
  <exec_depend>uvicorn</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
